<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FF00FF"
    tools:context=".MainActivity" >

    <ImageView
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_desc"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_centerInParent="true"
		android:scaleType="centerCrop"
		android:src="@drawable/background" />

    <TextView
        android:scrollHorizontally="false"
        android:id="@+id/to_translate"
        style="@style/SG.to_translate"
		android:maxLines="4"
		android:singleLine="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Dom" />
    
	<EditText
	    android:id="@+id/translated"
	    style="@style/SG.rectangle_text_edit"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/to_translate"
	    android:background="@drawable/rectangle_text_edit"
	    android:hint="@string/translated"
	    android:inputType="textNoSuggestions|textVisiblePassword" />

    <Button
        android:onClick="dialogClicked"
        style="@style/SG.btn_check"
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/translated"
        android:layout_below="@+id/translated"
        android:background="@drawable/btn_sprawdz"
        android:text="@string/btn_check" />
<!--
    <TextView
        android:onClick="textReadClick"
        android:layout_below="@+id/btn_check"
        android:id="@+id/text_read"
        style="@style/SG.text_read"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_read" />
-->
</RelativeLayout>

