<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    android:orientation="vertical" >
	
    <TextView
        android:id="@+id/t0"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center"
        android:text="Twoje tłumaczenie:"
        android:textSize="12sp"/>
    
    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center"
        android:text=""
        android:textSize="24sp"
        android:typeface="monospace" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center"
        android:text="Poprawne tłumaczenie:"
        android:textSize="12sp"/>
    
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textSize="24sp"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="0dp"
        android:paddingLeft="75dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/result"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/ok_desc"
            android:src="@drawable/ok" />

        <ImageView
            android:visibility="invisible"
	   		android:onClick="soundClicked"
            android:id="@+id/sound"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/speaker_desc"
            android:src="@drawable/speaker" />

    </LinearLayout>

    <Button
	    android:onClick="dialogClicked"
        android:id="@+id/btn_nastepne"
        style="@style/SG.btn_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/btn_nastepne"
        android:text="@string/btn_next" />

</LinearLayout>

